--- a/template/index.html
+++ b/template/index.html
@@ -1,38 +1,15 @@
-<!--LoadingArea-->
-<style>
-body{
-	margin:0 auto;
-	overflow-x:hidden;
-}
-.loading{
-	position:fixed;
-	opacity:1;
-	z-index:200;
-	width:100%;
-	height:100%;
-	margin:0 auto;
-	background-color:#FFFFFF;
-	transition:1s ease;
-}
-.loadingpic{
-	position:relative;
-	margin:0 auto;
-	left:50%;
-	top:50%;
-	transform:translate(-50%,-50%);
-}
-</style>
-<div class='loading' id='loading'><img src='./loadingcloth.gif' class='loadingpic'></img></div>
-<!--LoadingAreaEnd-->
-<div id='container'>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<!--[MainTitle]--><title>{[title]}-{[sitename]}</title><!--[MainTitleEnd]-->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--description-->
 <meta name="description" content="{[description]}" />
 <!--Keywords-->
 <meta name="keywords" content="{[keywords]}" />
 </head>
+<!--[LoadingArea]-->
+<div id='container'>
+<style>#container{opacity:0;}</style>
+<!--[MainTitle]--><title>{[title]}-{[sitename]}</title><!--[MainTitleEnd]-->
 <body>
 <!--[PostTitle]-->{[title]}<!--[PostTitleEnd]-->
 <!--[PostDate]-->{[date]}<!--[PostDateEnd]-->
