--- a/template/style.css
+++ b/template/style.css
@@ -1,3 +1,11 @@
+a{
+	text-decoration:none;
+	color:#848484;
+	transition:1s ease;
+}
+a:hover{
+	color:#585858;
+}
 body{
 	margin:0 auto;
 	overflow-x:hidden;
