🍗 增加封面图cover支持！

--- a/template/index.html
+++ b/template/index.html
@@ -18,6 +18,7 @@
 <!--[PostContentEnd]-->
 <!--[PostTag]-->{[tags]}<!--[PostTagEnd]-->
 <!--[PostID]-->{[pid]}<!--[PostIDEnd]-->
+<!--[PostCover]-->{[cover]}<!--[PostCoverEnd]-->
 <div style='display:none;'><!--[PageType]-->{[type]}<!--[PageTypeEnd]--></div>
 <script src="./main.js?233"></script>
 <script>B.tpcheck();</script>
