🥪 add small stuffs

--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
 </head>
 <!--[LoadingArea]-->
 <div id='container'>
-<style>#container{opacity:0;}</style>
+<style>#container{opacity:0;word-wrap:break-word;word-break:break-all;max-width:50%;overflow:hidden}</style>
 <!--[MainTitle]--><title>{[title]}-{[sitename]}</title><!--[MainTitleEnd]-->
 <body>
 <!--[PostTitle]-->{[title]}<!--[PostTitleEnd]-->
