--- a/template/loading.html
+++ b/template/loading.html
@@ -7,9 +7,9 @@
 	height:100%;
 	margin:0 auto;
 	background-color:#FFFFFF;
-	transition:1s ease;
+	transition:0.5s ease;
 }
-.loadingpic{
+#loadingpic{
 	position:fixed;
 	margin:0 auto;
 	left:50%;
@@ -17,4 +17,4 @@
 	transform:translate(-50%,-50%);
 }
 </style>
-<div class='loading' id='loading'><img src='./loadingcloth.gif' class='loadingpic'></img></div>
+<div class='loading' id='loading'><img src='./loadingcloth.gif' id='loadingpic'></img></div>
