模板写灵活

--- a/template/postitem.html
+++ b/template/postitem.html
@@ -1,4 +1,4 @@
-<!--Item of the List-->
+<!--PostItem-->
 <h2>
   <a href='{[postitemlink]}' class='itemlink'>{[postitemtitle]}</a></h2>
 <p>
@@ -7,4 +7,7 @@
 <p class='itemintro'>{[postitemintro]}</p>
 <small class='small-date'>{[postitemdate]}</small>
 <hr>
-<!--Item End-->
+<!--PostItemEnd-->
+<!--NoItem-->
+<h3 style='color:#AAA;'>没有更多了呢</h3>
+<!--NoItemEnd-->
