--- a/template/main.html
+++ b/template/main.html
@@ -2,5 +2,5 @@
   <div class='titleb'>
     <h1 class='headtitle'>My Blog</h1>
     <p class='lead'>简单生活~</p></div>{[contents]}
-  <!--Footer-->
+  {(Footer:)}
   <p class='copy'>&copy;2019 SomeBottle</p></div>
