--- a/template/postitem.html
+++ b/template/postitem.html
@@ -1,4 +1,4 @@
-<!--PostItem-->
+{(PostItem)}
 <h2>
   <a href='{[postitemlink]}' class='itemlink'>{[postitemtitle]}</a></h2>
 <p>
@@ -7,7 +7,7 @@
 <p class='itemintro'>{[postitemintro]}</p>
 <small class='small-date'>{[postitemdate]}</small>
 <hr>
-<!--PostItemEnd-->
-<!--NoItem-->
+{(PostItemEnd)}
+{(NoItem)}
 <h3 style='color:#AAA;'>没有更多了呢</h3>
-<!--NoItemEnd-->
+{(NoItemEnd)}
