--- a/template/archives.html
+++ b/template/archives.html
@@ -1,16 +1,17 @@
-<!--Archives-->
+{(Archives)}
 <div class='posts'>
   <h3 class='paneltitle'>Archives</h3>
   <hr>
   {[archives]}
   <hr></div>
+  {(PageType)}{[pagetype]}{(PageTypeEnd)}
   <!--[PageType]{[pagetype]}[PageTypeEnd]-->
   <script>PJAX.autoprevent();PJAX.sel('container');PJAX.start();</script>
-  <!--ArchivesEnd-->
-<!--ArchiveTemplate-->
+  {(ArchivesEnd)}
+{(ArchiveTemplate)}
 <h2>{[archiveyear]}</h2>
 <ul>{[archiveitems]}</ul>
-<!--ArchiveTemplateEnd-->
-<!--ArchiveItemTemplate-->
+{(ArchiveTemplateEnd)}
+{(ArchiveItemTemplate)}
 <li><a class='taglink archivelink' href='{[archiveitemlink]}'>{[archiveitemtitle]}</a></li><!--日期：{[archiveitemdate]}-->
-<!--ArchiveItemTemplateEnd-->
+{(ArchiveItemTemplateEnd)}
