--- a/template/post.html
+++ b/template/post.html
@@ -1,4 +1,4 @@
-<!--Post-->
+{(Post)}
 <ifcover><img src='{[postcover]}'></img></ifcover>
 <h3 class='posttitle'>{[posttitle]}</h3>
 <small class='small-date'>{[postdate]}</small>
@@ -6,7 +6,7 @@
 <small class='small-date' style='font-size:80%;'>标签：{[posttags]}
   <!--<a href='#' class='taglink'>日常</a>--></small>
 <script>PJAX.autoprevent();PJAX.sel('container');PJAX.start();</script>
-<!--[PageType]{[pagetype]}[PageTypeEnd]-->
-<!--PostEnd-->
+{(PageType)}{[pagetype]}{(PageTypeEnd)}
+{(:PostEnd)}
 <!--Comment-->
 <div class='comments'>{[comments]}</div>
