--- a/template/tags.html
+++ b/template/tags.html
@@ -1,19 +1,18 @@
-<!--Tags-->
+{(Tags)}
 <div class='posts'>
   <h3 class='paneltitle' id='tagtitle'>Tags</h3>
   <hr>
-  <h2 id='tags'>{[tags]}
-    <!--[<a href='#Page' class='itemlink'>日常</a>]--></h2>
+  <h2 id='tags'>{[tags]}</h2>
   <hr></div>
-  <!--[PageType]{[pagetype]}[PageTypeEnd]-->
+  {(PageType)}{[pagetype]}{(PageTypeEnd)}
   <script>PJAX.autoprevent();PJAX.sel('container');PJAX.start();</script>
-<!--TagsEnd-->
-<!--TagItemTemplate-->
+{(TagsEnd)}
+{(TagItemTemplate)}
 [<a href='{[tagitemlink]}' class='itemlink'>{[tagitemtitle]}</a>]
-<!--TagItemTemplateEnd-->
-<!--TagListTemplate-->
+{(TagItemTemplateEnd)}
+{(TagListTemplate)}
 <ul>{[taglist]}</ul>
-<!--TagListTemplateEnd-->
-<!--TagListItemTemplate-->
+{(TagListTemplateEnd)}
+{(TagListItemTemplate)}
 <li><a class='taglink' href='{[taglistitemlink]}'>{[taglistitemtitle]}</a></li><!--当前标签：{[tagcurrent]} 日期：{[taglistitemdate]}-->
-<!--TagListItemTemplateEnd-->
+{(TagListItemTemplateEnd)}
