--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
 <!--Keywords-->
 <meta name="keywords" content="{[keywords]}" />
 </head>
-{(LoadingArea)}
+<!--[LoadingArea]-->
 <div id='container'>
 <style>#container{opacity:0;word-wrap:break-word;word-break:break-all;max-width:50%;overflow:hidden}</style>
 {(MainTitle)}<title>{[title]}-{[sitename]}</title>{(MainTitleEnd)}
