--- a/template/cloth.html
+++ b/template/cloth.html
@@ -2,6 +2,7 @@
   
   <head>
     <title>{[title]}</title>
+	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
