Fix head rendering

--- a/template/cloth.html
+++ b/template/cloth.html
@@ -1,12 +1,11 @@
-<html>
-  
-  <head>
+<clothhead>
     <title>{[title]}</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href='./style.css' rel="stylesheet" /></head>
-  <body>
+    <link href='./style.css' rel="stylesheet" />
+</clothhead>
+<body>
     <nav class="navbar">
       <!--NavBoard-->
       <span>
@@ -14,6 +13,4 @@
       </span>
       <p class='navmenu'><a href='/' class='nava'>首页</a></p></nav>
 		{[main]}
-  </body>
-
-</html>
+</body>
