--- a/template/postitem.html
+++ b/template/postitem.html
@@ -6,6 +6,7 @@
 <ifcover><img src='{[postcover]}'></img></ifcover>
 <p class='itemintro'>{[postitemintro]}</p>
 <small class='small-date'>{[postitemdate]}</small>
+<!--Tags:{[PostItemTags]}-->
 <hr>
 {(PostItemEnd)}
 {(NoItem)}
