修改了模板渲染逻辑，更改略大

--- a/template/tags.html
+++ b/template/tags.html
@@ -2,10 +2,9 @@
 <div class='posts'>
   <h3 class='paneltitle' id='tagtitle'>Tags</h3>
   <hr>
-  <h2 id='tags'>{[tags]}</h2>
+  <h2>{[tags]}</h2>
   <hr></div>
   {(PageType)}{[pagetype]}{(PageTypeEnd)}
-  <script>PJAX.autoprevent();PJAX.sel('container');PJAX.start();</script>
 {(TagsEnd)}
 {(TagItemTemplate)}
 [<a href='{[tagitemlink]}' class='itemlink'>{[tagitemtitle]}</a>]
