--- a/template/postlist.html
+++ b/template/postlist.html
@@ -1,6 +1,14 @@
+{(PostListTemplate)}
 <div class='posts'>
   <h3 class='paneltitle'>Posts</h3>
-  <hr><div id='postitems'>{[postitems]}</div>
-  <button class='pagebtn' id='morebtn' onclick='B.more()'>More...</button></div>
+  <hr>{[postitems]}
+  {[morebtn]}</div><!--返回按钮：{[backbtn]}-->
   {(PageType)}{[pagetype]}{(PageTypeEnd)}
-  <script>PJAX.autoprevent();PJAX.sel('container');PJAX.start();</script>
+   {[backbtn]}
+ {(PostListTemplateEnd)}
+{(MoreBtn)}
+<button class='pagebtn' onclick='B.more()'>More...</button>
+{(MoreBtnEnd)}
+{(BackBtn)}
+
+{(BackBtnEnd)}
