--- a/template/index.html
+++ b/template/index.html
@@ -6,10 +6,10 @@
 <!--Keywords-->
 <meta name="keywords" content="{[keywords]}" />
 </head>
-<!--[LoadingArea]-->
+<loadingarea></loadingarea>
 <div id='container'>
 <style>#container{opacity:0;word-wrap:break-word;word-break:break-all;max-width:50%;overflow:hidden}</style>
-{(MainTitle)}<title>{[title]}-{[sitename]}</title>{(MainTitleEnd)}
+{(MainTitle)}<title>{[title]}{[titlemiddle]}{[sitename]}</title>{(MainTitleEnd)}
 <body>
 {(PostTitle)}{[title]}{(PostTitleEnd)}
 {(PostDate)}{[date]}{(PostDateEnd)}
