修了前台loading浮页样式还有后台的部分

--- a/jcs/m.css
+++ b/jcs/m.css
@@ -398,9 +398,13 @@ body {
 .rp {
     /*recent posts*/
     position: inherit;
-    width: 100%;
+    width: calc(100%-20px);
     height: 60%;
-    overflow-y: hidden;
+    overflow-y: auto;
+}
+
+.rp::-webkit-scrollbar {
+    display: none;
 }
 
 .postitemp {
