--- a/jcs/m.css
+++ b/jcs/m.css
@@ -79,6 +79,7 @@ body {
 
 .f {
     position: absolute;
+    display: none;
     left: 50%;
     top: 60%;
     margin-top: 1000px;
@@ -123,29 +124,31 @@ body {
     -o-transform: translate(-50%, -50%);
 }
 
-.n {
-    /*notice*/
-    z-index: 100;
+.noticeWrapper {
     position: fixed;
-    font-family: '\5FAE\8F6F\96C5\9ED1';
-    font-size: 20px;
-    border-radius: 10px;
-    opacity: 0;
-    color: #6E6E6E;
-    height: 20px;
-    width: 100px;
-    padding: 5px 5px 10px 5px;
+    z-index: 200;
+    width: 100%;
     left: 0;
-    right: 0;
-    top: 40%;
-    bottom: 0;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #F5ECCE;
-    transition: 0.5s ease;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-@keyframes playnotice {
+.noticeWrapper h3 {
+    background-color: #F5ECCE;
+    color: #6E6E6E;
+    position: relative;
+    display: block;
+    width: max-content;
+    max-width: 100%;
+    border-radius: 10px;
+    padding: .3em .6em;
+    margin: .2em auto;
+    word-break: break-word;
+    opacity: 0;
+    transition: 1s ease;
+}
+
+@keyframes playNotice {
     0% {
         opacity: 0;
     }
@@ -386,7 +389,7 @@ body {
     -webkit-appearance: none;
     font-size: 30px;
     outline: 0;
-    transition: 1s ease;
+    transition: .5s ease;
     opacity: 0;
     display: none;
 }
@@ -398,7 +401,7 @@ body {
 .rp {
     /*recent posts*/
     position: inherit;
-    width: calc(100%-20px);
+    width: 100%;
     height: 60%;
     overflow-y: auto;
 }
